--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1105,6 +1105,27 @@ ferramentas
     url = {http://www.espertech.com/esper}
 }
 
+
+
+@misc{edge-of-cloud,
+    author = {{edge-of-cloud}},
+    company = {edge-of-cloud},
+    year = {2020},
+    url-date = {28/05/2020},
+    url = {https://edge-of-cloud.blogspot.com/2017/06/}
+}
+
+@article{maeng2020demand,
+  title={Demand forecasting for the 5G service market considering consumer preference and purchase delay behavior},
+  author={Maeng, Kyuho and Kim, Jihwan and Shin, Jungwoo},
+  journal={Telematics and Informatics},
+  volume={47},
+  pages={101327},
+  year={2020},
+  publisher={Elsevier}
+}
+
+
 @misc{ESPERDataWindows,
     author = {{ESPERDataWindows}},
     company = {Espertech},
