--- a/cap-arquitetura.tex
+++ b/cap-arquitetura.tex
@@ -158,15 +158,11 @@ Além desses passos, algumas limitações são impostas no processo para o funci
 
 Duas estratégias distintas podem ser usadas por uma instância de \texttt{CEP Worker} para escolher tipos de eventos para realocação em outras instâncias num caso de sobrecarga: 
 \begin{itemize}
-   
-    \item Considerar na escolha os tipos e tamanhos de estados\todo{aqui é "tipos de estados" mesmo? Não seria "tamanho do estado"?} usados na detecção dos tipos de eventos alocados na instância sobrecarregada, como feito por \cite{6906776}%, para realocar o processamento de certos tipos de eventos de \texttt{CEP Worker}s. 
+   %\todo{aqui é "tipos de estados" mesmo? Não seria "tamanho do estado"?}
+    \item Considerar na escolha os tipos e tamanhos de estados
+     usados na detecção dos tipos de eventos alocados na instância sobrecarregada, como feito por \cite{6906776}. Essa estratégia (descrita no Algoritmo \ref{alg:relocation_resource_usage}) separa os tipos de eventos entre aqueles que não necessitam de estado para detecção, aqueles cuja estado é baseado em janela temporal e aqueles cujo estado depende do fluxo de eventos de entrada. Os tipos de eventos que utilizam nenhum estado ou que usam menos estado são os primeiros a serem selecionados para realocação. O ranqueamento é baseado no tempo que se leva para construir o estado de cada tipo de evento, de acordo com seus eventos de entrada. Tipos de evento baseados em janelas temporais são avaliados a partir do intervalo de tempo de suas janelas. Tipos de eventos baseados em janelas de eventos são avaliados a partir da medição do seu fluxo de eventos de entrada, mais especificamente do menor fluxo entre os eventos de entrada. Isso garante que as realocações de tipos de evento possam ocorrer mais rapidamente.% e distribuindo a carga de processamento com mais agilidade\todo{o que é agilidade nesse contexto? não é a mesma coisa que a rapidez mencionada antes?}.
     
-    %Essa estratégia (descrita no Algoritmo \ref{alg:relocation_resource_usage}) separa os tipos de eventos entre aqueles 
-    %que não necessitam de estado para detecção, aqueles cuja estado é baseado em janela temporal e aqueles cujo estado depende do fluxo de eventos de entrada. Os tipos de eventos que utilizam nenhum estado ou que usam menos estado são os primeiros a serem selecionados para realocação. O ranqueamento é baseado no tempo que se leva para construir o estado de cada tipo de evento, de acordo com seus eventos de entrada. Tipos de evento baseados em janelas temporais são avaliados a partir do intervalo de tempo de suas janelas. Tipos de eventos baseados em janelas de eventos são avaliados a partir da medição do seu fluxo de eventos de entrada, mais especificamente do menor fluxo entre os eventos de entrada. Isso garante que as realocações de tipos de evento possam ocorrer mais rapidamente.% e distribuindo a carga de processamento com mais agilidade\todo{o que é agilidade nesse contexto? não é a mesma coisa que a rapidez mencionada antes?}.
-    
-     \item Considerar na escolha a similaridade entre tipos de eventos de entrada dos tipos de eventos alocados na instância sobrecarregada, como proposto por \cite{Isoyama:2012:SCE:2335484.2335498}
-     
-     %Nessa segunda estratégia (descrita no Algoritmo \ref{alg:relocation_similarity}), os tipos de eventos sendo detectados cujos tipos de evento de entrada diferem mais dos de outros tipos de eventos processados na instância são selecionados primeiro para realocação. Quando todos os tipos de evento processados utilizam os mesmos tipos de evento de entrada, os tipos de eventos para realocação são selecionados de acordo com o Algoritmo~\ref{alg:relocation_resource_usage}.
+     \item Considerar na escolha a similaridade entre tipos de eventos de entrada dos tipos de eventos alocados na instância sobrecarregada, como proposto por \cite{Isoyama:2012:SCE:2335484.2335498}. Nessa segunda estratégia (descrita no Algoritmo \ref{alg:relocation_similarity}), os tipos de eventos sendo detectados cujos tipos de evento de entrada diferem mais dos de outros tipos de eventos processados na instância são selecionados primeiro para realocação. Quando todos os tipos de evento processados utilizam os mesmos tipos de evento de entrada, os tipos de eventos para realocação são selecionados de acordo com o Algoritmo~\ref{alg:relocation_resource_usage}.
 
 \end{itemize}
 
@@ -243,7 +239,7 @@ A cada novo cadastro ou remoção do processamento de algum tipo de evento, todo
 
 O Algoritmo \ref{alg:relocation_similarity} (Balanceamento de Carga por Similaridade de Entrada) utiliza duas estruturas principais para organizar a seleção dos tipos de evento. A primeira (o indiceInvertidoDeEntrada) é um índice invertido de tipos de eventos, que armazena, para cada tipo de evento, uma lista dos tipos de eventos que o tem como entrada. A segunda (TiposDeEventoPorRank), é um dicionário de tipos de evento por \textit{rank}, que utiliza um valor numérico (o \textit{rank}) como chave e possui uma lista de tipos de eventos como valor por cada chave. 
 
-O algoritmo utiliza os metadados dos tipos de eventos para saber qual tipo de evento usa um dado outro de tipo de evento como entrada e popular a estrutura indiceInvertidoDeEntrada. Depois que essa estrutura está devidamente populada, para cada tipo de evento \textit{T}, o algoritmo seleciona o tipo de evento de entrada \textit{P} de \textit{T} menos utilizado por outros tipos de eventos, utilizando o tamanho da lista de tipos de eventos associada ao tipo de evento de entrada \textit{P} em indiceInvertidoDeEntrada. A partir da seleção de \textit{P} e da quantidade de vezes que \textit{P} é usado por todos os tipos de eventos, esse valor de \textit{rank}\todo{mas qual é valor de rank? note que a frase anterior no deixa claro. O rank é a qtde de vezes que P é usada como entrada por outros tipos de eventos?} é utilizado como chave em TiposDeEventoPorRank. O tipo de evento é adicionado a lista valor associada ao seu \textit{rank}. 
+O algoritmo utiliza os metadados dos tipos de eventos para saber qual tipo de evento usa um dado outro de tipo de evento como entrada e popular a estrutura indiceInvertidoDeEntrada. Depois que essa estrutura está devidamente populada, para cada tipo de evento \textit{T}, o algoritmo seleciona o tipo de evento de entrada \textit{P} de \textit{T} menos utilizado por outros tipos de eventos, utilizando o tamanho da lista de tipos de eventos associada ao tipo de evento de entrada \textit{P} em indiceInvertidoDeEntrada. A partir da seleção de \textit{P} e da quantidade de vezes que \textit{P} é usado por todos os tipos de eventos cujo valor é utilizado como o \textit{rank} de \textit{T} em TiposDeEventoPorRank.%, esse valor de \textit{rank}\todo{mas qual é valor de rank? note que a frase anterior no deixa claro. O rank é a qtde de vezes que P é usada como entrada por outros tipos de eventos?} é utilizado como chave em TiposDeEventoPorRank. O tipo de evento é adicionado a lista valor associada ao seu \textit{rank}. 
 
 Para selecionar qual tipo de evento deve ser realocado, busca-se o menor \textit{rank} dentre aqueles presentes como chave em TiposDeEventoPorRank e a seleção entre os tipos de evento que estão associados ao mesmo \textit{rank} é feita utilizando o algoritmo \ref{alg:relocation_resource_usage}.
 
@@ -376,7 +372,7 @@ A arquitetura descrita neste capítulo pode ser considerada como nativa de nuvem
 
 %\subsection{Auto-Escalabilidade}  
 
-Dos seis microsserviços que compõe o sistema, quatro não armazenam estado durante seu processamento: \todo{listar aqui os nomes dos 4}. Como visto na Seção \ref{sec:stateless}, esse tipo de microsserviço pode ser replicado para tratar um aumento na carga a ser processada sem maiores complicações. O aumento ou diminuição do número de instâncias de microsserviços sem estado é normalmente gerido pelo serviço de gerenciamento dinâmico de recursos na nuvem escolhido. Além disso, vários SGBDs chave-valor oferecem mecanismos de escalabilidade horizontal para leitura rápida, como os mencionados na Seção \ref{sec:stateful}. Na Seção \ref{sub-sec:cep-worker-func}, foram discutidos os métodos de detecção de sobrecarga e requisição de novas instâncias para o serviço de gerenciamento dinâmico de recursos quando a sobrecarga forte é detectada. 
+Dos seis microsserviços que compõe o sistema, quatro não armazenam estado durante seu processamento: \texttt{CEP Cataloger}, \texttt{Event Composer}, \texttt{Event Sender} e o \textit{broker} de mensagens. Como visto na Seção \ref{sec:stateless}, esse tipo de microsserviço pode ser replicado para tratar um aumento na carga a ser processada sem maiores complicações. O aumento ou diminuição do número de instâncias de microsserviços sem estado é normalmente gerido pelo serviço de gerenciamento dinâmico de recursos na nuvem escolhido. Além disso, vários SGBDs chave-valor oferecem mecanismos de escalabilidade horizontal para leitura rápida, como os mencionados na Seção \ref{sec:stateful}. Na Seção \ref{sub-sec:cep-worker-func}, foram discutidos os métodos de detecção de sobrecarga e requisição de novas instâncias para o serviço de gerenciamento dinâmico de recursos quando a sobrecarga forte é detectada. 
 
 %\subsection{Tolerância a Falhas} 
 
