--- a/cap-trabalhos.tex
+++ b/cap-trabalhos.tex
@@ -108,7 +108,7 @@ São poucos os trabalhos que citam CEP na pesquisa de sistemas nativos de nuvem~
 Além disso, várias pesquisas~\citep{7463825,7490807,9179545,8473459}
 enfocam a execução distribuída de CEP em dispositivos de Internet da Coisas (IoT, do inglês \textit{Internet of Things}), onde somente eventos de alta importância são enviados para um centro de processamento. \cite{9018282} apresentaram a implementação de uma abordagem desse tipo, na qual é proposta uma arquitetura de três camadas (borda, névoa e nuvem) para o processamento de dados em cidades inteligentes e só os eventos mais relevantes são enviados da borda para a névoa e da névoa para a nuvem. 
 
-O uso de CEP em dispositivos IoT, não só para sensoreamento mas também para processamento de eventos, é uma abordagem com vantagens e desvantagens. As principais vantagens são a redução do tráfego de mensagens a partir dos dispositivos e o envio de notificações mais rápido para as localidades mais próximas à detecção. Algumas das desvantagens são a perda inerente de informação a ser armazenada e a menor tolerância a falhas nos casos em que um dispositivo processa dados de vários sensores. Caso ocorra uma falha nesse dispositivo, seu reparo ou reposição depende de intervenção manual e os dados dos sensores associados a ele são perdidos, descartados ou sobrecarregam o processamento de outros dispositivos. Utilizando processamento em nuvem com gerenciamento dinâmico de recursos, a instanciação de um novo ambiente de processamento pode ser feita automaticamente, diminuindo o tempo em que parte do sistema está indisponível. Além disso, com a adoção e maior uso de tecnologias de internet sem fio, como 5G, é esperado que o preço da transmissão de dados seja reduzido~\citep{8480631,9163457,9151379}.
+O uso de CEP em dispositivos IoT, não só para sensoreamento mas também para processamento de eventos, é uma abordagem com vantagens e desvantagens. As principais vantagens são a redução do tráfego de mensagens a partir dos dispositivos e o envio de notificações mais rápido para as localidades mais próximas à detecção. Algumas das desvantagens são a perda inerente de informação a ser armazenada e a menor tolerância a falhas nos casos em que um dispositivo processa dados de vários sensores. Caso ocorra uma falha nesse dispositivo, seu reparo ou reposição depende de intervenção manual e os dados dos sensores associados a ele são perdidos, descartados ou sobrecarregam o processamento de outros dispositivos. Utilizando processamento em nuvem com gerenciamento dinâmico de recursos, a instanciação de um novo ambiente de processamento pode ser feita automaticamente, diminuindo o tempo em que parte do sistema está indisponível. Além disso, com a adoção e maior uso de tecnologias de internet sem fio, como 5G, é esperado que o preço da transmissão de dados seja reduzido~\citep{maeng2020demand,8480631,9163457}.
 
 
 %Apesar desse tipo de abordagem reduzir bastante o tráfego de dados, realizando a detecção de eventos de forma mais distribuída, ela dificulta o cálculo de agregações em tempo real de todos os dados coletados. 
